// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > MultipleErrors 1`] = `
<div>
  <ul
    aria-label="Validation errors of field undefined"
    data-testid="undefined_error"
  >
    <li>
      <div>
        first error
      </div>
    </li>
    <li>
      <div>
        second error
      </div>
    </li>
  </ul>
</div>
`;

exports[`Story Snapshots > SingleError 1`] = `
<div>
  <ul
    aria-label="Validation errors of field undefined"
    data-testid="undefined_error"
  >
    <li>
      <div>
        single error message
      </div>
    </li>
  </ul>
</div>
`;
